Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/Rep_Assignment_Table__c.object-meta.xml
<CustomObject>
    <label>Rep Assignment Table</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Rep Assignment Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rep Assignment Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>