Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONE</fullName>
            </value>
            <value>
                <fullName>EH</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>Food Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>