Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Univ</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Institut</fullName>
            </value>
            <value>
                <fullName>Educat</fullName>
            </value>
            <value>
                <fullName>Acade Teva Syngenta</fullName>
            </value>
            <value>
                <fullName>AstraZeneca</fullName>
            </value>
            <value>
                <fullName>Medimmune</fullName>
            </value>
            <value>
                <fullName>Quintiles</fullName>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>Scottish Environmental Protection Agency</fullName>
            </value>
            <value>
                <fullName>Astellas Sanofi</fullName>
            </value>
            <value>
                <fullName>Servier</fullName>
            </value>
            <value>
                <fullName>Pierre Fabre</fullName>
            </value>
            <value>
                <fullName>Michelin Sanofi</fullName>
            </value>
            <value>
                <fullName>NOVARTIS</fullName>
            </value>
            <value>
                <fullName>SANDOZ</fullName>
            </value>
            <value>
                <fullName>BOEHRINGER</fullName>
            </value>
            <value>
                <fullName>INGELHEIM</fullName>
            </value>
            <value>
                <fullName>BOEHRINGER-INGELHEIM</fullName>
            </value>
            <value>
                <fullName>ABBVIE</fullName>
            </value>
            <value>
                <fullName>Baxalta</fullName>
            </value>
            <value>
                <fullName>Shire</fullName>
            </value>
            <value>
                <fullName>BASF</fullName>
            </value>
            <value>
                <fullName>Evonik</fullName>
            </value>
            <value>
                <fullName>Wacker</fullName>
            </value>
            <value>
                <fullName>Covestro</fullName>
            </value>
            <value>
                <fullName>Fresenius</fullName>
            </value>
            <value>
                <fullName>Grünenthal GmbH</fullName>
            </value>
            <value>
                <fullName>Vifor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>