Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>