Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/IGOR_PAC__c.field-meta.xml
<CustomField>
    <fullName>IGOR_PAC__c</fullName>
    <label>IGOR_PAC</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>