Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Researcher</fullName>
            </value>
            <value>
                <fullName>B2B Manager</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Clinical Coordinator</fullName>
            </value>
            <value>
                <fullName>Cord Blood Contact</fullName>
            </value>
            <value>
                <fullName>Corporate Management</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Lab Manager</fullName>
            </value>
            <value>
                <fullName>Labor &amp; Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Lab Technician</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Manufacturing &amp; QA/QC</fullName>
            </value>
            <value>
                <fullName>Nurse/Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Practice Manager</fullName>
            </value>
            <value>
                <fullName>Principle Investigator</fullName>
            </value>
            <value>
                <fullName>Purchasing/Finance</fullName>
            </value>
            <value>
                <fullName>R&amp;D Scientist</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Regulatory Manager</fullName>
            </value>
            <value>
                <fullName>Scientific Analyst</fullName>
            </value>
            <value>
                <fullName>Site Leader</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Women’s Director</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>EH&amp;S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>