Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>AVC</fullName>
            </value>
            <value>
                <fullName>AVS</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>BTX</fullName>
            </value>
            <value>
                <fullName>CKP</fullName>
            </value>
            <value>
                <fullName>CLH</fullName>
            </value>
            <value>
                <fullName>CLR</fullName>
            </value>
            <value>
                <fullName>CMG</fullName>
            </value>
            <value>
                <fullName>CRD</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>DIS</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>DSK</fullName>
            </value>
            <value>
                <fullName>ELM</fullName>
            </value>
            <value>
                <fullName>Ensemble for Biology</fullName>
            </value>
            <value>
                <fullName>Ensemble for Chemistry</fullName>
            </value>
            <value>
                <fullName>Ensemble for Formulations</fullName>
            </value>
            <value>
                <fullName>Ensemble for QA/QC</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>ESS</fullName>
            </value>
            <value>
                <fullName>EZR</fullName>
            </value>
            <value>
                <fullName>FAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>