Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>