Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>