Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Seconday_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Seconday_Qualification__c</fullName>
    <label>Seconday Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>