Perkin-UAT/force-app/main/default/objects/Rep_Assignment_Table__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>